Atualização no portfólio: nova seção de projetos

--- a/index.html
+++ b/index.html
@@ -156,12 +156,20 @@
 <section id="projetos">
   <h2>Projetos Recentes</h2>
   <div class="projeto">
-    <h3>Landing Page de Agência</h3>
+    <h3>Landing Page para todas as ocasiões </h3>
     <p>Site leve e rápido com animações e formulário de contacto.</p>
   </div>
   <div class="projeto">
     <h3>Portfólio Pessoal</h3>
     <p>Site responsivo com foco em performance e design.</p>
+  </div>
+  <div class="projeto">
+    <h3>Calculadora Web com JavaScript</h3>
+    <p>Projeto simples e funcional feito para treinar lógica e interação de elementos com JS puro.</p>
+  </div>
+  <div class="projeto">
+    <h3>Clone do Google (Interface)</h3>
+    <p>Projeto de estudo que replica o layout da página inicial do Google com HTML e CSS.</p>
   </div>
 </section>
 
