t push origin main adicinando seo
git rebase --continue

clear

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       text-decoration: none;
       font-weight: bold;
       box-shadow: 0 5px 15px #1a4904f3
-      transition: background-color 0.3s ease;
+      transition; background-color 0.3s ease;
     }
 
     .whatsapp-button:hover {
@@ -113,6 +113,7 @@
     }
   </style>
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <meta name="google-site-verification" content="r0EUh81X3CeT2GTX0yKUIMrrcHdODvTNVH1smiWI9Go" />
 </head>
 <body>
 
